tests/ui/typech/construct_struct_type_extra_field.lm
struct A {
    pub foo: Boolean;
}

fn foo() {
    let a = A { foo: false, bar: 0 };
}
